# Symplektis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ReSpellerWordsList.txt  Symplektis_CppCheck.cppcheck
InfoImages/: BinaryTreeBridgeArchitecture.graphml  GeneralBinaryTreeArchitecture.graphml  SurfaceEvolverGraph.graphml  Symplekt_Architecture.graphml  Symplekt_BinaryTreeArchitecture.graphml  Symplekt_CommandArchitecture.graphml
Symplekt_OutputData/UnitTests/: LargerIterativeStrTreeInstance_print.txt  LargerMyRecursiveStrTreeInstance_print.txt  MyIterativeStrTreeInstance_plantUML.txt  MyIterativeStrTreeInstance_print.txt  MyRecursiveStrTreeInstance_plantUML.txt  MyRecursiveStrTreeInstance_print.txt  arc.vtk  bunny.vtk  icosahedron.vtk  maxMinScalarField.vti  minMaxScalarField.vti  polynomialScalarField.vti  trigScalarField.vti
Symplekt_ResourceData/: bunnySimple.vtk
Symplekt_Source/: CMakeLists.txt  ShrinkWrapper.cpp  SymplektMain.cpp
Symplekt_Source/Symplekt_Algorithms/: AlgorithmHelperTypes.h  CMakeLists.txt  IncrementalRemesher.cpp  IncrementalRemesher.h
Symplekt_Source/Symplekt_Algorithms/UnitTests/: CMakeLists.txt  IncrementalRemeshing_Tests.cpp
Symplekt_Source/Symplekt_AnalysisKernel/: CMakeLists.txt
Symplekt_Source/Symplekt_DataReps/: BinaryTree.cpp  BinaryTree.h  BinaryTreeHelperTypes.cpp  BinaryTreeHelperTypes.h  BinaryTreeUtils.cpp  BinaryTreeUtils.h  CMakeLists.txt  IBinaryTreeImplementation.h  IBinaryTreeNode.h  IBinaryTreeQueryDataNode.h  IterativeBinaryTreeImplementation.cpp  IterativeBinaryTreeImplementation.h  IterativeBinaryTreeNode.cpp  IterativeBinaryTreeNode.h  RecursiveBinaryTreeImplementation.cpp  RecursiveBinaryTreeImplementation.h  RecursiveBinaryTreeNode.cpp  RecursiveBinaryTreeNode.h  StringSearchBinaryTree.cpp  StringSearchBinaryTree.h
Symplekt_Source/Symplekt_DataReps/UnitTests/: BinaryTree_Tests.cpp  CMakeLists.txt
Symplekt_Source/Symplekt_GeometryBase/: Box3.cpp  Box3.h  Box3Utils.cpp  Box3Utils.h  CMakeLists.txt  Edge.h  Face.cpp  Face.h  FaceUtils.cpp  FaceUtils.h  GeometryHelperTypes.h  HalfEdge.h  HalfEdgeUtils.cpp  HalfEdgeUtils.h  Matrix2.cpp  Matrix2.h  Matrix2Utils.cpp  Matrix2Utils.h  Matrix3.cpp  Matrix3.h  Matrix3Utils.cpp  Matrix3Utils.h  Matrix4.cpp  Matrix4.h  Matrix4Utils.cpp  Matrix4Utils.h  Poly2Tri_AdvancingFront.cpp  Poly2Tri_CDT.cpp  Poly2Tri_Shapes.cpp  Poly2Tri_Sweep.cpp  Poly2Tri_Sweep.h  Poly2Tri_SweepContext.cpp  Quaternion.cpp  Quaternion.h  QuaternionUtils.cpp  QuaternionUtils.h  RectilinearGridBox3.cpp  RectilinearGridBox3.h  Vector2.cpp  Vector2.h  (+11 more)
Symplekt_Source/Symplekt_GeometryBase/UnitTests/: Box3_Tests.cpp  CMakeLists.txt  FaceUtil_Tests.cpp  Matrix2_Tests.cpp  Matrix3_Tests.cpp  Matrix4_Tests.cpp  Quaternion_Tests.cpp  Vector2_Tests.cpp  Vector3_Tests.cpp
Symplekt_Source/Symplekt_GeometryKernel/: Box3.cpp  Box3.h  Box3Utils.cpp  Box3Utils.h  BufferGeometryBuilder.cpp  BufferGeometryBuilder.h  BufferMeshGeometry.cpp  BufferMeshGeometry.h  BufferToReferencedMeshGeometryConverter.cpp  BufferToReferencedMeshGeometryConverter.h  CMakeLists.txt  Edge.h  Face.cpp  Face.h  FaceUtils.cpp  FaceUtils.h  GeometryHelperTypes.h  HalfEdge.h  HalfEdgeUtils.cpp  HalfEdgeUtils.h  ImplicitGeometryDataTypes.h  Matrix2.cpp  Matrix2.h  Matrix2Utils.cpp  Matrix2Utils.h  Matrix3.cpp  Matrix3.h  Matrix3Utils.cpp  Matrix3Utils.h  Matrix4.cpp  Matrix4.h  Matrix4Utils.cpp  Matrix4Utils.h  MeshGeometryDataTypes.h  Poly2Tri.h  Poly2Tri_AdvancingFront.h  Poly2Tri_CDT.h  Poly2Tri_Shapes.h  Poly2Tri_SweepContext.h  Poly2Tri_Utils.h  (+26 more)
Symplekt_Source/Symplekt_GeometryKernel/UnitTests/: Box3_Tests.cpp  BufferMeshGeometry_DataValidity_Tests.cpp  CMakeLists.txt  FaceUtil_Tests.cpp  Matrix2_Tests.cpp  Matrix3_Tests.cpp  Matrix4_Tests.cpp  MeshGeometryConverter_Tests.cpp  MeshGeometryDataForTesting.h  Quaternion_Tests.cpp  ReferencedMeshGeometry_DataValidity_Tests.cpp  ReferencedMeshGeometry_Utilities_Tests.cpp  Vector2_Tests.cpp  Vector3_Tests.cpp
Symplekt_Source/Symplekt_GeometryReps/: BufferGeometryBuilder.cpp  BufferGeometryBuilder.h  BufferMeshGeometry.cpp  BufferMeshGeometry.h  BufferToReferencedMeshGeometryConverter.cpp  BufferToReferencedMeshGeometryConverter.h  CMakeLists.txt  ImplicitGeometryDataTypes.h  MeshGeometryDataTypes.cpp  MeshGeometryDataTypes.h  ReferencedGeometryBuilder.cpp  ReferencedGeometryBuilder.h  ReferencedMeshGeometry.cpp  ReferencedMeshGeometry.h  ReferencedToBufferMeshGeometryConverter.cpp  ReferencedToBufferMeshGeometryConverter.h  ScalarGridInit.h
Symplekt_Source/Symplekt_GeometryReps/UnitTests/: BufferMeshGeometry_DataValidity_Tests.cpp  CMakeLists.txt  MeshGeometryConverter_Tests.cpp  MeshGeometryDataForTesting.h  ReferencedMeshGeometry_DataValidity_Tests.cpp  ReferencedMeshGeometry_Utilities_Tests.cpp
Symplekt_Source/Symplekt_IOService/: BaseGeometryImportHandle.cpp  BaseGeometryImportHandle.h  CMakeLists.txt  GeometryIOData.h  IOHelperTypes.h  OBJExporter.cpp  OBJExporter.h  OBJImporter.cpp  OBJImporter.h  SymplektisCommandDispatcher.h  VTIExporter.cpp  VTIExporter.h  VTIImporter.cpp  VTIImporter.h  VTKExporter.cpp  VTKExporter.h  VTKImporter.cpp  VTKImporter.h
Symplekt_Source/Symplekt_IOService/UnitTests/: BaseGeometryHandle_Tests.cpp  CMakeLists.txt  OBJExport_Tests.cpp  OBJImport_Tests.cpp  ScalarGridVTI_Export_Tests.cpp  VTKExport_Tests.cpp  VTKImport_Tests.cpp
Symplekt_Source/Symplekt_Numerics/: CMakeLists.txt
Symplekt_Source/Symplekt_ProcessingKernel/: CMakeLists.txt
Symplekt_Source/Symplekt_UtilityGeneral/: Assert.cpp  Assert.h  CMakeLists.txt  ContainerTypes.h  ErrorCode.h  Exceptions.h  IndexType.h  InterfaceUtils.cpp  InterfaceUtils.h  IteratorHelperUtils.h  NamedValue.h  NumericUtils.cpp  NumericUtils.h  ToleranceSettings.cpp  ToleranceSettings.h  UUIDTools.h  UnitTestUtils.h
Symplekt_Source/Symplekt_UtilityGeneral/UnitTests/: CMakeLists.txt  Interface_Tests.cpp  Iterator_Tests.cpp
